--- a/pages/index.css
+++ b/pages/index.css
@@ -1,2 +1,12 @@
 @import url(../vendor/normalize.css);
 @import url(../pages/fonts.css);
+@import url(../blocks/page/page.css);
+@import url(../blocks/header/header.css);
+
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__lang-links/header__lang-links.css);
+@import url(../blocks/header/__lang-link/header__lang-link.css);
+
+.border {
+  outline: 1px solid red;
+}
