--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,9 +1,11 @@
 .header__lang-link {
-  text-decoration: none;
   font: 400 24px/28px 'Inter';
   color: #fff;
-  margin-left: 18px;
+  margin: 0 0 0 18px;
+  padding: 0;
   position: relative;
+  background: none;
+  border: none;
 }
 
 .header__lang-link:first-child {
