--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,7 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/intro/intro.css);
+@import url(../blocks/photo-grid/photo-grid.css);
 
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
@@ -17,6 +18,7 @@
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__description/intro__description.css);
 @import url(../blocks/intro/__span-accent/intro__span-accent.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
 
 .border {
   outline: 1px solid red;
