--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,14 +1,19 @@
-.place__link {
-  font: 400 18px/22px 'Inter', sans-serif;
+.footer__link {
+  margin: 0 0 0 18px;
+  padding: 0;
+  font: 400 16px/18px 'Inter', sans-serif;
   color: #fff;
   text-decoration: none;
-  border-bottom: 1px solid #fff;
   opacity: 1;
   -webkit-transition: opacity .6s ease;
   -o-transition: opacity .6s ease;
   transition: opacity .6s ease;
 }
 
-.place__link:hover {
+.footer__link:first-child {
+  margin-left: 0;
+}
+
+.footer__link:hover {
   opacity: .8;
 }
