--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,18 +1,31 @@
 .cover__overlay {
-  position: absolute;
-  left: 0;
-  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: url(../../../images/cover-trains.jpg) no-repeat;
+  background-size: cover;
+  position: relative;
+  min-height: 740px;
   width: 100%;
-  height: 100%;
-  background-color: #2A2C2F;
-  opacity: .3;
-  z-index: 1;
-  -webkit-transition: opacity 1s ease;
-  -o-transition: opacity 1s ease;
-  transition: opacity 1s ease;
   text-decoration: none;
 }
 
-.cover__overlay:hover {
+.cover__overlay::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #2A2C2F;
+  opacity: .3;
+  -webkit-transition: opacity 1s ease;
+  -o-transition: opacity 1s ease;
+  transition: opacity 1s ease;
+}
+
+.cover__overlay:hover::before {
   opacity: .8;
 }
