--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,6 +1,8 @@
 .footer__links {
-  margin: 0;
+  margin: 0 0 0 18px;
   padding: 0;
-  list-style: none;
-  display: flex;
+}
+
+.footer__links:first-child {
+  margin-left: 0;
 }
