--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,5 +2,7 @@
   max-width: 1184px;
   display: flex;
   justify-content: space-between;
-  margin: 92px auto 24px auto;
+  padding: 92px 0 24px 0;
+  margin-left: auto;
+  margin-right: auto;
 }
