Изменение line-height на относительные единицы

--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,5 +1,5 @@
 .header__lang-link {
-  font: 400 24px/28px 'Inter';
+  font: 400 24px/1.17 'Inter';
   color: #fff;
   margin: 0 0 0 18px;
   padding: 0;
