--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,6 +2,6 @@
   margin: 0;
   padding: 0;
   max-width: 690px;
-  font: 900 54px/58px 'Inter', sans-serif;
+  font: 900 54px/1.07 'Inter', sans-serif;
   color: #fff;
 }
