--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   max-width: 720px;
-  font: 900 96px/100px 'Inter', sans-serif;
+  font: 900 96px/1.04 'Inter', sans-serif;
   color: #fff;
   text-align: center;
 }
