--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -2,7 +2,7 @@
   margin: 32px 0 0 0;
   padding: 0;
   max-width: 360px;
-  font: 400 18px/22px 'Inter', sans-serif;
+  font: 400 18px/1.2 'Inter', sans-serif;
   color: #fff;
   text-align: center;
   z-index: 2;
