--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   max-width: 560px;
-  font: 900 72px/76px 'Inter', sans-serif;
+  font: 900 72px/1.05 'Inter', sans-serif;
   color: #fff;
   text-align: center;
   z-index: 2;
