--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,6 +1,6 @@
 .footer__copyright {
   margin: 0;
   padding: 0;
-  font: 400 14px/16px 'Inter', sans-serif;
+  font: 400 14px/1.14 'Inter', sans-serif;
   color: #fff;
 }
