--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,5 +1,5 @@
 .footer__link {
-  font: 400 16px/18px 'Inter', sans-serif;
+  font: 400 16px/1.13 'Inter', sans-serif;
   color: #fff;
   text-decoration: none;
   opacity: 1;
