--- a/blocks/intro/__description/intro__description.css
+++ b/blocks/intro/__description/intro__description.css
@@ -1,6 +1,6 @@
 .intro__description {
   margin: 0;
   padding: 0;
-  font: 700 12px/18px 'Inter', sans-serif;
+  font: 700 12px/1.5 'Inter', sans-serif;
   color: #fff;
 }
