--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,6 +2,6 @@
   margin: 40px 0 0 0;
   padding: 0;
   max-width: 690px;
-  font: 400 16px/163% 'Inter', sans-serif;
+  font: 400 16px/1.6 'Inter', sans-serif;
   color: #fff;
 }
