--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -2,7 +2,7 @@
   margin: 8px 0 0 0;
   padding: 0;
   max-width: 158px;
-  font: 400 10px/14px 'Inter', sans-serif;
+  font: 400 10px/1.4 'Inter', sans-serif;
   color: #fff;
   text-transform: uppercase;
   align-self: flex-start;
