--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -2,7 +2,7 @@
   margin: 32px 0 0 0;
   padding: 0;
   max-width: 640px;
-  font: 400 30px/36px 'Inter', sans-serif;
+  font: 400 30px/1.2 'Inter', sans-serif;
   color: #fff;
   text-align: center;
 }
