--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,5 +1,5 @@
 .place__link {
-  font: 400 18px/22px 'Inter', sans-serif;
+  font: 400 18px/1.2 'Inter', sans-serif;
   color: #fff;
   text-decoration: none;
   border-bottom: 1px solid #fff;
