--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,7 +1,7 @@
 .place__paragraph {
   margin: 0 0 26px 0;
   padding: 0;
-  font: 400 18px/163% 'Inter', sans-serif;
+  font: 400 18px/1.6 'Inter', sans-serif;
   color: #fff;
 }
 
