--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,6 +1,6 @@
 .place__title {
   margin: 0;
   padding: 0;
-  font: 900 72px/76px 'Inter', sans-serif;
+  font: 900 72px/1.05 'Inter', sans-serif;
   color: #fff;
 }
