--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,7 +1,7 @@
 .place__url-heading {
   margin: 0 0 12px 0;
   padding: 0;
-  font: 400 12px/12px 'Inter', sans-serif;
+  font: 400 12px/1 'Inter', sans-serif;
   letter-spacing: 2px;
   color: #aaa;
 }
