--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,3 +7,22 @@
   margin-right: auto;
   padding-top: 28px;
 }
+
+@media (max-width: 1279px) {
+  .header {
+    max-width: calc(100% - 2*48px);
+  }
+}
+
+@media (max-width: 1023px) {
+  .header {
+    max-width: calc(100% - 2*24px);
+  }
+}
+
+@media (max-width: 767px) {
+  .header {
+    max-width: calc(100% - 2*16px);
+    padding-top: 16px;
+  }
+}
