--- a/blocks/footer/__nav/footer__nav.css
+++ b/blocks/footer/__nav/footer__nav.css
@@ -4,3 +4,10 @@
   margin: 0;
   padding: 0;
 }
+
+@media (max-width: 767px) {
+  .footer__nav {
+    flex-direction: column;
+    margin-bottom: 48px;
+  }
+}
