--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,3 +6,31 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+@media (max-width: 1279px) {
+  .footer {
+    max-width: calc(100% - 2*48px);
+  }
+}
+
+@media (max-width: 1023px) {
+  .footer {
+    max-width: calc(100% - 2*24px);
+    padding-top: 88px;
+  }
+}
+
+@media (max-width: 767px) {
+  .footer {
+    padding-top: 64px;
+    padding-left: 85px;
+    margin: 0;
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 549px) {
+  .footer {
+    padding-left: 16px;
+  }
+}
