--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -3,3 +3,15 @@
   object-fit: cover;
   margin-top: 64px;
 }
+
+@media (max-width) {
+  .lead__image {
+    margin-top: 56px;
+  }
+}
+
+@media (max-width: 767px) {
+  .lead__image {
+    margin-top: 40px;
+  }
+}
