--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,3 +6,20 @@
   color: #fff;
   text-align: center;
 }
+
+@media (max-width: 767px) {
+  .lead__subtitle {
+    max-width: 400px;
+    margin-top: 20px;
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 549px) {
+  .lead__subtitle {
+    max-width: 288px;
+    margin-top: 16px;
+    font-size: 16px;
+    line-height: 1.25;
+  }
+}
