--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -7,3 +7,16 @@
   flex-direction: column;
   align-items: center;
 }
+
+@media (max-width: 1279px) {
+  .lead {
+    max-width: calc(100% - 2*48px);
+    padding-top: 48px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .lead {
+    max-width: 100%;
+  }
+}
