--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -6,3 +6,23 @@
   margin-right: auto;
   padding-top: 92px;
 }
+
+@media (max-width: 1279px) {
+  .intro {
+    max-width: calc(100% - 2*48px);
+  }
+}
+
+@media (max-width: 1023px) {
+  .intro {
+    max-width: calc(100% - 2*24px);
+    padding-top: 88px;
+  }
+}
+
+@media (max-width: 767px) {
+  .intro {
+    max-width: calc(100% - 2*16px);
+    padding-top: 64px;
+  }
+}
