--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -7,3 +7,19 @@
   text-align: center;
   z-index: 2;
 }
+
+@media (max-width: 767px) {
+  .cover__subtitle {
+    max-width: 370px;
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 549px) {
+  .cover__subtitle {
+    margin-top: 16px;
+    max-width: 270px;
+    font-size: 14px;
+    line-height: 1.14;
+  }
+}
