--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -12,9 +12,15 @@
   }
 }
 
-@media (max-width: 1023px) {
+@media (max-width: 767px) {
   .intro__title {
-    max-width: 80%;
+    font-size: 46px;
+  }
+}
+
+@media (max-width: 549px) {
+  .intro__title {
+    max-width: 250px;
     font-size: 32px;
     line-height: 1.1;
   }
