--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -8,3 +8,32 @@
   grid-template-rows: repeat(3,1fr);
   gap: 16px;
 }
+
+@media (max-width: 1279px) {
+  .photo-grid {
+    max-width: calc(100% - 2*48px);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4,1fr);
+    gap: 14px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .photo-grid {
+    padding-top: 88px;
+    max-width: calc(100% - 2*24px);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6,1fr);
+    gap: 16px;
+  }
+}
+
+@media (max-width: 767px) {
+  .photo-grid {
+    padding-top: 64px;
+    max-width: calc(100% - 2*16px);
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(12,1fr);
+    gap: 12px;
+  }
+}
