--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -8,3 +8,17 @@
 .place__paragraph:last-child {
   margin-bottom: 0;
 }
+
+@media (max-width: 1023px) {
+  .place__paragraph {
+    font-size: 16px;
+    margin-bottom: 25px;
+  }
+}
+
+@media (max-width: 767px) {
+  .place__paragraph {
+    max-width: calc(100% - 2*16px);
+    margin-left: 16px;
+  }
+}
