--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,3 +4,17 @@
   font: 900 72px/1.05 'Inter', sans-serif;
   color: #fff;
 }
+
+@media (max-width: 1023px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 1.1;
+  }
+}
+
+@media (max-width: 767px) {
+  .place__title {
+    font-size: 32px;
+    margin-left: 16px;
+  }
+}
