--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,6 @@
 .place {
   display: grid;
-  grid-template-columns: 460px 484px;
+  grid-template-columns: 460px 1fr;
   grid-template-rows: 1fr 460px;
   column-gap: 40px;
   row-gap: 48px;
@@ -12,4 +12,30 @@
 
 .place:last-child {
   margin-bottom: 0;
+}
+
+@media (max-width: 1279px) {
+  .place {
+    grid-template-columns: 440px 1fr;
+    grid-template-rows: 1fr 440px;
+    column-gap: 32px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .place {
+    grid-template-columns: 340px 1fr;
+    grid-template-rows: 1fr max-content;
+    column-gap: 28px;
+    margin-bottom: 73px;
+  }
+}
+
+@media (max-width: 767px) {
+  .place {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    row-gap: 32px;
+    margin-bottom: 50px;
+  }
 }
