Добавление рендеринга заголовкам

--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -4,6 +4,7 @@
   max-width: 690px;
   font: 900 54px/1.07 'Inter', sans-serif;
   color: #fff;
+  text-rendering: optimizeLegibility;
 }
 
 @media (max-width: 1023px) {
