--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -3,6 +3,7 @@
   padding: 0;
   font: 900 72px/1.05 'Inter', sans-serif;
   color: #fff;
+  text-rendering: optimizeLegibility;
 }
 
 @media (max-width: 1023px) {
