--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,22 +4,13 @@
   margin: 0 0 0 18px;
   padding: 0;
   position: relative;
-  background: none;
-  border: none;
+  text-decoration: none;
+  /*background: none;
+  border: none;*/
 }
 
 .header__lang-link:first-child {
   margin-left: 0;
-}
-
-.header__lang-link:first-child::after {
-  display: block;
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 1.5px;
-  background-color: #fff;
-  content: "";
 }
 
 @media (max-width: 767px) {
