--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,7 +2,9 @@
   max-width: 690px;
   display: flex;
   flex-direction: column;
-  margin-top: 33px;
+  margin: 33px 0 0 0;
+  padding: 0;
+  list-style: none;
 }
 
 @media (max-width: 767px) {
