--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,7 +1,7 @@
 .lead__image {
   width: 100%;
-  object-fit: cover;
-  margin-top: 64px;
+  margin: 64px 0 0 0;
+  padding: 0;
 }
 
 @media (max-width: 1279px) {
