--- a/blocks/nav/__link/nav__link.css
+++ b/blocks/nav/__link/nav__link.css
@@ -1,4 +1,4 @@
-.footer__link {
+.nav__link {
   font: 400 16px/1.13 'Inter', sans-serif;
   color: #fff;
   text-decoration: none;
@@ -8,12 +8,12 @@
   transition: opacity .6s ease;
 }
 
-.footer__link:hover {
+.nav__link:hover {
   opacity: .8;
 }
 
 @media (max-width: 767px) {
-  .footer__link {
+  .nav__link {
     font-size: 24px;
     line-height: 1;
   }
